# drone-pilot

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
components/application/: Application.cc  Application.h  ApplicationTask.h  CMakeLists.txt
components/asio/: CMakeLists.txt  asio.cc
components/connection_manager/: CMakeLists.txt  Client.cc  Client.h  ConnectionManager.cc  ConnectionManager.h  ConnectionTask.h  Session.h
components/drone_common/: CMakeLists.txt
components/freertos_utility/: CMakeLists.txt  Queue.hpp  Task.hpp
components/networking/: CMakeLists.txt  CommandReceiver.h  NetworkManager.cc  NetworkManager.h  NetworkingTask.h  Receiver.h  SocketManager.cc  SocketManager.h
components/utility/: CMakeLists.txt  CircularQueue.h  StaticTask.h  Task.h  Task.hpp
components/websocket/: CMakeLists.txt  Server.cc  Server.h
components/wifi/: CMakeLists.txt  Kconfig.projbuild  Wifi.cc  Wifi.h
components/wifi_manager/: CMakeLists.txt  WifiManager.cc  WifiManager.h
main/: CMakeLists.txt  ConnectionManager.cc  ConnectionManager.h  Kconfig.projbuild  StaticTask.h  WifiManager.cc  WifiManager.h  application.cc  application.h  main.cc  static_task.h  wifi_manager.cc  wifi_manager.h  wifi_observer.h
